<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y24"
            android:layout_marginBottom="@dimen/y24"
            android:text="@string/task_request_enter_time"
            android:textColor="@color/black_item_text_title_color"
            android:textSize="@dimen/sp14" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x48"
            android:layout_marginEnd="@dimen/x48"
            android:timePickerMode="spinner" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@drawable/divider_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/y24"
            android:layout_marginEnd="@dimen/x32"
            android:layout_marginBottom="@dimen/y16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/x4"
                android:text="@string/cancel"
                android:textColor="@color/sub_title_text_color"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/x4"
                android:layout_marginStart="@dimen/x48"
                android:text="@string/confirm"
                android:textColor="@color/theme"
                android:textSize="@dimen/sp12" />

        </LinearLayout>

    </LinearLayout>

</layout>