<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <data>

        <variable
            name="topTitle"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/include_top"
            bind:title="@{topTitle}" />

        <com.drake.brv.PageRefreshLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.stx.xhb.androidx.XBanner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y191"
                    android:layout_marginTop="@dimen/y8"
                    app:AutoPlayTime="3000"
                    app:isShowIndicatorOnlyOne="true"
                    app:isShowTips="true"
                    app:pageChangeDuration="800"
                    app:pointNormal="@drawable/shape_normal"
                    app:pointSelect="@drawable/shape_selected"
                    app:pointsPosition="RIGHT"
                    app:tipTextSize="@dimen/sp12" />

                <LinearLayout
                    android:id="@+id/layout_task_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x35"
                    android:layout_marginEnd="@dimen/x35"
                    android:layout_marginTop="@dimen/y29"
                    android:background="@drawable/shape_task_bg">

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_marginStart="@dimen/x27"
                        android:layout_marginTop="@dimen/y24"
                        android:layout_marginBottom="@dimen/y24"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/icon_task_date"
                        app:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/task_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/sub_title_text_color"
                        android:textSize="@dimen/sp16"
                        android:text="@string/task_date"
                        android:layout_marginStart="@dimen/x49"
                        android:layout_marginTop="@dimen/y26"
                        android:layout_marginBottom="@dimen/y26"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_task_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x35"
                    android:layout_marginEnd="@dimen/x35"
                    android:layout_marginTop="@dimen/y18"
                    android:background="@drawable/shape_task_bg">

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_marginStart="@dimen/x27"
                        android:layout_marginTop="@dimen/y24"
                        android:layout_marginBottom="@dimen/y24"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/icon_task_time"
                        app:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/sub_title_text_color"
                        android:textSize="@dimen/sp16"
                        android:text="@string/task_time"
                        android:layout_marginStart="@dimen/x49"
                        android:layout_marginTop="@dimen/y26"
                        android:layout_marginBottom="@dimen/y26"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_task_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x35"
                    android:layout_marginEnd="@dimen/x35"
                    android:layout_marginTop="@dimen/y18"
                    android:background="@drawable/shape_task_bg">

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_marginStart="@dimen/x27"
                        android:layout_marginTop="@dimen/y24"
                        android:layout_marginBottom="@dimen/y24"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/icon_task_ring"
                        app:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_ring"
                        android:spinnerMode="dropdown"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/sp14"
                        android:layout_marginStart="@dimen/x40"
                        android:layout_marginTop="@dimen/y26"
                        android:layout_marginBottom="@dimen/y26"
                        android:layout_marginEnd="@dimen/x27"
                        android:layout_gravity="center_vertical"
                        android:entries="@array/spinner_ring"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_task_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x35"
                    android:layout_marginEnd="@dimen/x35"
                    android:layout_marginTop="@dimen/y18"
                    android:background="@drawable/shape_task_bg">

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_marginStart="@dimen/x27"
                        android:layout_marginTop="@dimen/y24"
                        android:layout_marginBottom="@dimen/y24"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/icon_task_type"
                        app:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_type"
                        android:spinnerMode="dropdown"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/sub_title_text_color"
                        android:textSize="@dimen/sp14"
                        android:layout_marginStart="@dimen/x40"
                        android:layout_marginTop="@dimen/y26"
                        android:layout_marginBottom="@dimen/y26"
                        android:layout_marginEnd="@dimen/x27"
                        android:layout_gravity="center_vertical"
                        android:entries="@array/spinner_type"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x35"
                    android:layout_marginEnd="@dimen/x35"
                    android:layout_marginTop="@dimen/y18"
                    android:background="@drawable/shape_task_bg">

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_marginStart="@dimen/x27"
                        android:layout_marginTop="@dimen/y24"
                        android:layout_marginBottom="@dimen/y24"
                        android:src="@mipmap/icon_task_content"
                        app:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/edit_task_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y180"
                        android:textColor="@color/sub_title_text_color"
                        android:textSize="@dimen/sp16"
                        android:layout_marginStart="@dimen/x49"
                        android:layout_marginTop="@dimen/y26"
                        android:layout_marginBottom="@dimen/y26"
                        android:layout_marginEnd="@dimen/x24"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:gravity="top|start"
                        android:hint="@string/task_content_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="@dimen/x6"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/task_add"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y100"
                    android:layout_marginStart="@dimen/x38"
                    android:layout_marginEnd="@dimen/x38"
                    android:layout_marginTop="@dimen/y53"
                    android:background="@drawable/shape_submit_bg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"
                    android:gravity="center"
                    android:text="@string/task_add"/>

            </LinearLayout>

        </com.drake.brv.PageRefreshLayout>

    </LinearLayout>

</layout>